fix bug in vignette
related to this potential issue in tidygraph

https://github.com/thomasp85/tidygraph/issues/147

--- a/vignettes/how-sr-works.Rmd
+++ b/vignettes/how-sr-works.Rmd
@@ -68,7 +68,7 @@ Let's illustrate using a real network:
 ```{r}
 # Load network
 karate_network <- karate %>%
-  as_tbl_graph(directed = FALSE)
+  tbl_graph(edges = ., directed = FALSE)
 
 # Simulate random walk through network (observations)
 karate_walk <- karate_network %>%
